[workspace]
members = ["ansi2", "ansi2-wasm"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "ansi2"
repository = "https://github.com/ahaoboy/ansi2"
homepage = "https://github.com/ahaoboy/ansi2"
authors = ["ahaoboy"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
wasm-bindgen = { version = "0.2" }
nom = "8"
html-escape = "0.2"
base64 = "0.22"
wasm-bindgen-test = "0.3"
ansi2 = { path = "./ansi2", features = ["wasm"] }
insta = { version = "1" }
infer = "0.19"
image = "0.25"
typed-arena = "2.0"
oxvg_optimiser = { git = "https://github.com/noahbald/oxvg.git", version = "0.0.3" }
oxvg_ast = { git = "https://github.com/noahbald/oxvg.git", version = "0.0.3" }
# FIXME: https://github.com/parcel-bundler/lightningcss/issues/985
ahash = "=0.8.11"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
