[package]
name = "ansi2-wasm"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
ansi2 = { workspace = true, features = ["wasm"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
