[package]
name = "ansi2"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
clap = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
nom = { workspace = true }
html-escape = { workspace = true }
base64 = { workspace = true }
infer = { workspace = true }
image = { workspace = true }
oxvg_optimiser = { workspace = true, optional = true }
oxvg_ast = { workspace = true, optional = true }
ahash = { workspace = true, optional = true }
which-shell = { workspace = true }
git-version = { workspace = true }
const-str = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
cli = ["clap", "minify"]
wasm = ["wasm-bindgen"]
minify = [
  "dep:oxvg_ast",
  "dep:oxvg_optimiser",
  "oxvg_optimiser/wasm",
]

[[bin]]
required-features = ["cli"]
name = "ansi2"
