[package]
name = "ansi2html"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "ansi2html"
repository = "https://github.com/ahaoboy/ansi2"
homepage = "https://github.com/ahaoboy/ansi2"
authors = ["ahaoboy"]

[dependencies]
ansi2 = { version = "0.2", path = "../ansi2" }
html-escape= "0.2.13"
