[package]
name = "ansi2svg"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "ansi2svg"
repository = "https://github.com/ahaoboy/ansi2"
homepage = "https://github.com/ahaoboy/ansi2"
authors = ["ahaoboy"]

[dependencies]
ansi2 = { version = "0.2", path = "../ansi2" }
html-escape= "0.2.13"